# pyBiodatafuse

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  fixaoptestdata.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: analysis-support-request.yml  bug_report.md  new_datasource_request.yaml
.github/workflows/: tests.yml
archive/gene_to_graph_workflow/: BDF_example_shex.ttl
contribute/: README.md
contribute/annotator_templates/: graphql.txt  sparql.txt
docs/: schema.dot
docs/source/: analyzers.rst  cli.rst  conf.py  datasources.rst  graph_plotters.rst  index.rst  installation.rst  usage.rst  utilities.rst
examples/: 01_gene_to_graph_workflow.ipynb  02_metabolite_to_graph.ipynb  02_metabolite_to_knowledge_graph.ipynb  03_dea_workflow.ipynb  04_patent_extraction.ipynb  DONT_PUSH_yg_test.ipynb  bdf_example.shacl  combined_df.pkl  dea_workflow.ipynb  example_file.csv  gene_to_graph_workflow.ipynb  gene_workflow.ipynb  graph_shex.ttl  metabolite_workflow.ipynb  output.ttl  plotting.ipynb  rdf_example.ipynb  test.py  test_compounds_for_generator.ipynb  test_compoundwiki.ipynb  test_intact_compound.ipynb  test_intact_gene.ipynb  test_shexer.ttl  workflow.ipynb  workflow_tester.py
examples/SPARQL/: queries.ttl
examples/data/: dea_example.xls
examples/data/gene_to_graph_workflow/: BDF_example_graph.ttl  BDF_example_shacl.ttl  BDF_example_shex.ttl  BDF_prefixes.ttl
examples/data/metabolite_workflow/: metabolite_to_graph.ttl
examples/post-covid_syndrome/: calculate_drug_scores.py  dreamwalk_algo.ipynb  generate_dis_sim.py  generate_files.py
examples/results/gene_to_graph_workflow/: BDF_example_shacl.ttl  BDF_example_shex.ttl  BDF_prefixes.ttl
examples/usecases/Combination/: Compound_combination_usecase.ipynb  compounds.tsv
examples/usecases/PCS/: 01_PCS_graph_workflow.ipynb  BDF_example_shacl.ttl  BDF_example_shex.ttl  BDF_prefixes.ttl  PCS_gene_list.csv  PCS_usecase.ipynb  PKD_Mice_graph_workflow.ipynb  get_disease_hierarchy.py  graph_algorithm.ipynb  graph_dreamwalk_algorithm.py  graph_generation.ipynb  graph_rdf.ipynb  graph_summary.ipynb  pcs_associated_genes.txt  query_genes_drugs.rq
examples/usecases/PCS/SPARQL/: 02_PCS_graph_summary.ipynb  questions.json
examples/usecases/PCS/data/: BDF_example_shacl.ttl  BDF_example_shex.ttl  BDF_prefixes.ttl  PCS_gene_list.csv  pcs_associated_genes.csv
examples/usecases/PCS/dreamwalk_data/: atc_hierarchy.csv  dda_1.tsv  dda_10.tsv  dda_2.tsv  dda_3.tsv  dda_4.tsv  dda_5.tsv  dda_6.tsv  dda_7.tsv  dda_8.tsv  dda_9.tsv  graph.txt  mesh_hierarchy.tsv  mondo_hierarchy.csv  mondo_hierarchy.tsv  nodetypes.tsv
examples/usecases/PKD/: PKD_Mice_graph_workflow.ipynb
examples/usecases/PKD/data/: full_de_genes_treated_vs_untreated_plus_cpm_fc.csv  full_de_genes_treated_vs_wildtype_plus_cpm_fc.csv  full_de_genes_untreated_vs_wildtype_plus_cpm_fc.csv
examples/usecases/mito/: graph_generation_human.ipynb  graph_generation_mice_final.ipynb
examples/usecases/muscle/: 01_graph_generation_human.ipynb  graph_generation_cell_final.ipynb  graph_generation_mice_final.ipynb  style.grass
examples/usecases/muscle/datasets/: cachexia_vs_control_all_genes.xlsx
graph_format/: biodatafuse-exp1.ttl  example.ttl  property2rdf.ipynb  rdf_data_model.shex
scripts/: update_datasources.py
src/pyBiodatafuse/: __init__.py  __main__.py  cli.py  constants.py  data_loader.py  human_homologs.py  id_annotator.py  id_mapper.py  logging_config.py  utils.py  version.py
src/pyBiodatafuse/algorithms/DREAMwalk/: HeterogeneousSG.py  calculate_drug_scores.py  constant.py  generate_dis_sim.py  generate_embeddings.py  generate_files.py  generate_similarity_net.py  predict_associations.py  utils.py
src/pyBiodatafuse/analyzer/: __init__.py  analysis.py  summarize.py  utils.py
src/pyBiodatafuse/analyzer/DREAMwalk/: HeterogeneousSG.py  generate_embeddings.py  generate_similarity_net.py  predict_associations.py  utils.py
src/pyBiodatafuse/annotators/: __init__.py  aopwiki.py  aopwikirdf.py  bgee.py  compoundwiki.py  disgenet.py  genrdf_annotator.py  gprofiler.py  hl.py  intact.py  kegg.py  minerva.py  minerva_annotator.py  mitocarta.py  molmedb.py  opentargets.py  pubchem.py  rdf_annotator_template.py  run.py  stringdb.py  tflink.py  wikidata.py  wikipathways.py
src/pyBiodatafuse/graph/: __init__.py  analysis.py  cytoscape.py  cytoscape_exporter.py  generator.py  neo4j.py  neo4j_exporter.py  rdf.py  saver.py
src/pyBiodatafuse/resources/: __init__.py  base.owl  biodatafuse.owl  datasources.csv  prefixes.ttl  styles.xml
src/pyBiodatafuse/viz/: __init__.py  patent_data.py  utils.py
tests/: __init__.py  test_bgee.py  test_id_mapper.py  test_kegg.py  test_minerva.py  test_molmedb.py  test_pubchem.py  test_string.py  test_version.py  test_wikipathways.py
tests/analyzer/: __init__.py
tests/annotators/: __init__.py  test_aop.py  test_bgee.py  test_compoundwiki.py  test_disgenet.py  test_intact.py  test_kegg.py  test_minerva.py  test_molmedb.py  test_opentargets.py  test_pubchem.py  test_string.py  test_wikidata.py  test_wikipathways.py
tests/annotators/data/: aop_mock_res.json  aop_mock_res_simple.json  bgee_expected_data.json  bgee_expected_data.tsv  bgee_mock_data.json  bgee_mock_expression_data.json  bgee_version_data.json  disgenet_gene_disease_mock.json  disgenet_mock_data.json  kegg_mock_data.txt  molmedb_compound_gene_mock.json  molmedb_mock_data.json  opentargets_compound_disease_mock_data.json  opentargets_compound_mock_data.json  opentargets_disease_compound_mock.json  opentargets_gene_compound_mock_data.json  opentargets_gene_disease_test.csv  opentargets_go_mock_data.json  opentargets_reactome_mock_data.json  pubchem_mock_data.json  wikidata_mock_data.json  wikipathway_mock_data.json
tests/data/: bgee_mock_data.json  pubchem_mock_data.json
tests/graph/: test_dataset_provenance.py  test_rdf.py
tests/graph/data/: combined_df_mock_data.json  combined_metadata_mock_data.json
(+85 files in other folders)
