##########################
# Setup.py Configuration #
##########################
[metadata]
name = pyBiodatafuse
version = 0.0.4-dev
description = A python package for integrating data from multiple resources
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/BioDataFuse/pyBiodatafuse
download_url = https://github.com/BioDataFuse/pyBiodatafuse/releases
project_urls =
    Tracker = https://github.com/BioDataFuse/pyBiodatafuse/issues
    Source = https://github.com/BioDataFuse/pyBiodatafuse
    Documentation = https://pyBiodatafuse.readthedocs.io

# Author information
author = Yojana Gadiya
author_email = yojanagadiya@gmail.com
maintainer = Tooba Abbassi-Daloii
maintainer_email = t.abbassidaloii@maastrichtuniversity.nl

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    drug-discvoery
    knowledge graphs
    # TODO add your own free-text keywords

[options]
install_requires =
    pandas==2.0.3
    tqdm==4.65.0
    SPARQLWrapper
    requests
    click
    matplotlib
    seaborn==0.13.0
    plotly==5.18.0
    rdkit==2023.9.1
    pubchempy==1.0.4
    nbformat==5.9.2
    networkx>=3.1
    xlrd>= 2.0.1
    neo4j>=5.14
    # TODO your requirements go here

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext


[options.entry_points]
console_scripts =
    pyBiodatafuse = pyBiodatafuse.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pyBiodatafuse
omit =
    tests/*
    docs/*
    examples/*

[coverage:paths]
source =
    src/pyBiodatafuse
    .tox/*/lib/python*/site-packages/pyBiodatafuse

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203 # whitespace before ':'
    S113 # timeout session for requests
    S101 # use of assert
    E712 # if condition strict requirement
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    pyBiodatafuse
    tests
